Added storage-wrapper! Made list commend look prettier! Added info-command! Made code look a bit more clean!