@@ -16,10 +16,12 @@
 package at.theduggy.duckguilds.files;
 
 import at.theduggy.duckguilds.Main;;
+import at.theduggy.duckguilds.other.JsonUtils;
 import org.bukkit.Bukkit;
 import org.bukkit.entity.Player;
 import org.json.simple.JSONObject;
 
+import java.io.File;
 import java.io.FileWriter;
 import java.io.IOException;
 import java.nio.charset.StandardCharsets;
@@ -27,10 +29,11 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.ArrayList;
+import java.util.UUID;
 
 public class GuildFiles {
-    public static Path guildPlayerFolder = Paths.get(Main.guildRootFolder.toString() + "/playerData");
-    public static Path guildGuildsFolder = Paths.get(Main.guildRootFolder.toString() + "/guilds");
+    public static Path guildPlayerFolder = Paths.get(Main.guildRootFolder.toAbsolutePath() + "/playerData");
+    public static Path guildGuildsFolder = Paths.get(Main.guildRootFolder.toAbsolutePath()+ "/guilds");
 
     public static boolean guildFolderStructureExists(){
         boolean exists = false;
@@ -43,7 +46,7 @@ public class GuildFiles {
     }
 
     public static boolean logFolderExists(){
-        if (Files.exists(Path.of(Main.plugin.getDataFolder() + "/logs"))){
+        if (Files.exists(Paths.get(Main.plugin.getDataFolder() + "/logs"))){
             return true;
         }else {
             return false;
@@ -51,57 +54,36 @@ public class GuildFiles {
     }
 
     public static void createLogFolder() throws IOException {
-        Files.createDirectory(Path.of(Main.plugin.getDataFolder() + "/logs"));
+        Files.createDirectory(Paths.get(Main.plugin.getDataFolder() + "/logs"));
     }
 
     public static void createGuildFiles() throws IOException {
         Files.createDirectories(guildPlayerFolder);
         Files.createDirectory(guildGuildsFolder);
     }
-    public static boolean checkForPersonalPlayerGuildFolder(Player p){
-        Path personalPlayerGuildFolder = Paths.get(guildPlayerFolder + "/" + p.getUniqueId());
-        if (Files.exists(personalPlayerGuildFolder)){
-            return true;
-        }else {
-            return false;
-        }
+    public static boolean checkForPersonalPlayerFile(UUID player){
+        return Files.exists(Path.of(GuildFiles.guildPlayerFolder + "/" + player + ".json"));
     }
 
-    public static boolean checkForPlayerDataFile(Player p){
-        return Files.exists(Path.of(guildPlayerFolder + "/" + p.getUniqueId() + "/data.json"));
+    public static void createPersonalPlayerFile(Player player) throws IOException {
+        Files.createFile(Path.of(guildPlayerFolder + "/"+ player.getUniqueId() + ".json"));
+        JSONObject rawJsonData = new JSONObject();
+        rawJsonData.put("name",player.getName());
+        FileWriter writeJsonData = new FileWriter(guildPlayerFolder + "/" + player.getUniqueId() + ".json");
+        writeJsonData.write(JsonUtils.toPrettyJsonString(rawJsonData.toJSONString()));
+        writeJsonData.close();
     }
 
-    public static void createPlayerDataFile(Player p) throws IOException {
+    public static boolean checkForPlayerDataFile(Player player){
+        return Files.exists(Paths.get(guildPlayerFolder + "/" + player.getUniqueId() + "/data.json"));
+    }
+
+    public static void createPlayerDataFile(Player player) throws IOException {
         JSONObject playerBlankData = new JSONObject();
-        playerBlankData.put("guild","");
-        playerBlankData.put("name", p.getName());
-        Files.createFile(Path.of(guildPlayerFolder + "/" + p.getUniqueId() + "/data.json"));
-        FileWriter blankDataWriter = new FileWriter(guildPlayerFolder + "/" + p.getUniqueId() + "/data.json", StandardCharsets.UTF_8);
+        playerBlankData.put("name", player.getName());
+        Files.createFile(Paths.get(guildPlayerFolder + "/" + player.getUniqueId() +".json"));
+        FileWriter blankDataWriter = new FileWriter(guildPlayerFolder + "/" + player.getUniqueId() + "/data.json", StandardCharsets.UTF_8);
         blankDataWriter.write(playerBlankData.toJSONString());
         blankDataWriter.close();
-    }
-    public static void createPersonalPlayerGuildFolder(Player p) throws IOException {
-        Path personalPlayerGuildFolder = Paths.get(guildPlayerFolder + "/" + p.getUniqueId());
-        Files.createDirectory(personalPlayerGuildFolder);
-    }
-
-    public static boolean checkForIndex(){
-        boolean exists = false;
-        Path guildIndexFile = Paths.get(Main.guildRootFolder + "/index.json");
-        if (Files.exists(guildIndexFile)){
-            exists = true;
-        }
-        return exists;
-    }
-
-    public static void createIndexFile() throws IOException {
-        Path guildIndexFile = Paths.get(Main.guildRootFolder + "/index.json");
-        ArrayList<String> dummyList = new ArrayList<>();
-        Files.createFile(guildIndexFile);
-        JSONObject jsonObject = new JSONObject();
-        jsonObject.put("guilds",dummyList);
-        FileWriter fileWriter = new FileWriter(String.valueOf(guildIndexFile), StandardCharsets.UTF_8);
-        fileWriter.write(jsonObject.toJSONString());
-        fileWriter.close();
     }
 }
